5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4151/executions/1865_1532.log
== TEST (2019-07-04 10:31:10) 
-- CODE:
from numpy math import*

x=float(input("digite: "))
k=int(input("digite: "))
i=0
s=0
while(k>i):
	s=s+(x**(2*i+1)/factorial(2*i+1))
	i=i+1
	
-- ERROR:
File "XXXX", line 1
    from numpy math import*
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:31:52) 
-- CODE:
from numpy import*
from math import*

x=float(input("digite: "))
k=int(input("digite: "))
i=0
s=0
while(k>i):
	s=s+(x**(2*i+1)/factorial(2*i+1))
	i=i+1
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:32:18) 
-- CODE:
from numpy import*
from math import*

x=float(input("digite: "))
k=int(input("digite: "))
i=0
s=0
while(k>i):
	s=s+(x**(2*i+1)/factorial(2*i+1))
	i=i+1
print(s)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 10:32:33) 
-- CODE:
from numpy import*
from math import*

x=float(input("digite: "))
k=int(input("digite: "))
i=0
s=0
while(k>i):
	s=s+(x**(2*i+1)/factorial(2*i+1))
	i=i+1
print(s)
	
-- EXECUTION TIME:
0.976905
-- TEST CASE 1:
---- input:
2.0
5
---- correct output:
3.62680776
---- user output:
3.626807760141093
-- TEST CASE 2:
---- input:
10.0
2
---- correct output:
176.666666667
---- user output:
176.66666666666666
-- TEST CASE 3:
---- input:
12.0
35
---- correct output:
81377.39570643
---- user output:
81377.39570642984
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:32:46) 
-- CODE:
from numpy import*
from math import*

x=float(input("digite: "))
k=int(input("digite: "))
i=0
s=0
while(k>i):
	s=s+(x**(2*i+1)/factorial(2*i+1))
	i=i+1
print(s)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:34:10) 
-- CODE:
from numpy import*
from math import*

x=float(input("digite: "))
k=int(input("digite: "))
i=0
s=0
while(k>i):
	s=s+(x**(2*i+1)/factorial(2*i+1))
	i=i+1
print(round(s,9)
	
-- ERROR:
File "XXXX", line 13
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:34:38) 
-- CODE:
from numpy import*
from math import*

x=float(input("digite: "))
k=int(input("digite: "))
i=0
s=0
while(k>i):
	s=s+(x**(2*i+1)/factorial(2*i+1))
	i=i+1
	
print(round(s,9))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 10:34:49) 
-- CODE:
from numpy import*
from math import*

x=float(input("digite: "))
k=int(input("digite: "))
i=0
s=0
while(k>i):
	s=s+(x**(2*i+1)/factorial(2*i+1))
	i=i+1
	
print(round(s,9))
	
-- EXECUTION TIME:
1.03663
-- TEST CASE 1:
---- input:
2.0
5
---- correct output:
3.62680776
---- user output:
3.62680776
-- TEST CASE 2:
---- input:
10.0
2
---- correct output:
176.666666667
---- user output:
176.666666667
-- TEST CASE 3:
---- input:
12.0
35
---- correct output:
81377.39570643
---- user output:
81377.39570643
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
